# gpu-bench

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/circuit/: large_circuit.rs  mod.rs  utils.rs
src/proof/: mod.rs  proof_generation.rs
