[package]
name = "gpu_proof_project"  # 项目名称
version = "0.1.0"           # 项目版本
edition = "2021"            # Rust 版本
description = "A project for generating and verifying zkSNARK proofs using GPU"
license = "MIT"             # 项目许可证

[dependencies]
# Bellman 库，启用 CUDA 支持
bellperson = { git = "https://github.com/filecoin-project/bellperson" }

# pairing 是 Bellman 的依赖，用于曲线操作
pairing = { git = "https://github.com/zkcrypto/pairing" }

# rand 用于生成随机输入
rand = "0.8"

# log 用于日志支持（可选）
log = "0.4"

[features]
# 自定义特性
default = ["cuda"]  # 默认启用 cuda 特性
cuda = ["bellperson/cuda"]  # 将 cuda 特性与 bellman 的 cuda 特性关联

[profile.release]
# 优化设置
opt-level = 3                # 最高优化等级
lto = true                   # 启用链接时优化
codegen-units = 1            # 单个代码生成单元以提升优化效果
panic = "abort"              # 使用更小的 panic 模型
